--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 ShopApp.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 ShopApp.xcodeproj/project.xcworkspace/xcuserdata/oleksandrorlov.xcuserdatad/UserInterfaceState.xcuserstate
 .DS_Store
+
+# Xcode
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.xccheckout
+profile
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
